liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef UINT32 HWI_HANDLE_T;
typedef struct tagIrqParam {
  int swIrq;
  void *pDevId;
  const CHAR *pName;
} tagIrqParam;
typedef struct tagIrqParam HwiIrqParam;
typedef unsigned short UINT16;
typedef UINT16 HWI_PRIOR_T;
typedef UINT16 HWI_MODE_T;
typedef void (*HWI_PROC_FUNC)(void);
typedef unsigned char UINT8;
typedef struct HwiControllerOps {
  UINT32 (*triggerIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*clearIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*enableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*disableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*setIrqPriority)(HWI_HANDLE_T hwiNum, UINT8 priority);
  UINT32 (*getCurIrqNum)(void);
  UINT32 (*createIrq)(HWI_HANDLE_T hwiNum, HWI_PRIOR_T hwiPrio);
} HwiControllerOps;
typedef struct LOS_DL_LIST {
  struct LOS_DL_LIST *pstPrev;
  struct LOS_DL_LIST *pstNext;
} LOS_DL_LIST;
typedef struct tagEvent {
  UINT32 uwEventID;
  struct LOS_DL_LIST stEventList;
} tagEvent;
extern void __stack_chk_fail(void);
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern void __stack_chk_fail(void);
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern void *ArchTskStackInit(UINT32 taskID, UINT32 stackSize, void *topStack);
extern void ArchSysExit(void);
extern void ArchTaskSchedule(void);
extern UINT32 ArchStartSchedule(void);
extern void *ArchSignalContextInit(void *stackPointer,
                                   void *stackTop,
                                   UINTPTR sigHandler,
                                   UINT32 param);
extern void __stack_chk_fail(void);
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern void __stack_chk_fail(void);
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern UINT32 ArchHwiCreate(HWI_HANDLE_T hwiNum,
                            HWI_PRIOR_T hwiPrio,
                            HWI_MODE_T mode,
                            HWI_PROC_FUNC handler,
                            HwiIrqParam *irqParam);
extern UINT32 ArchIsIntActive(void);
extern UINT32 ArchIntLock(void);
extern UINT32 ArchIntUnLock(void);
extern void ArchIntRestore(UINT32 intSave);
extern UINT32 ArchIntTrigger(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntEnable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntDisable(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntClear(HWI_HANDLE_T hwiNum);
extern UINT32 ArchIntSetPriority(HWI_HANDLE_T hwiNum, HWI_PRIOR_T priority);
extern UINT32 ArchIntCurIrqNum(void);
extern struct HwiControllerOps *ArchIntOpsGet(void);
extern void *ArchTskStackInit(UINT32 taskID, UINT32 stackSize, void *topStack);
extern void ArchSysExit(void);
extern void ArchTaskSchedule(void);
extern UINT32 ArchStartSchedule(void);
extern void *ArchSignalContextInit(void *stackPointer,
                                   void *stackTop,
                                   UINTPTR sigHandler,
                                   UINT32 param);