liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

#[test]
fn bindgen_test_layout_HwiControllerOps() {
    assert_eq!(
        ::std::mem::size_of::<HwiControllerOps>(),
        56usize,
        concat!("Size of: ", stringify!(HwiControllerOps))
    );
    assert_eq!(
        ::std::mem::align_of::<HwiControllerOps>(),
        8usize,
        concat!("Alignment of ", stringify!(HwiControllerOps))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).triggerIrq as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(triggerIrq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).clearIrq as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(clearIrq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).enableIrq as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(enableIrq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).disableIrq as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(disableIrq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).setIrqPriority as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(setIrqPriority)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).getCurIrqNum as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(getCurIrqNum)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<HwiControllerOps>())).createIrq as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(HwiControllerOps),
            "::",
            stringify!(createIrq)
        )
    );
}
extern "C" {
    pub static mut __stack_chk_guard: UINT32;
}
extern "C" {
    pub fn __stack_chk_fail();
}
extern "C" {
    #[doc = " @ingroup  los_interrupt"]
    #[doc = " @brief Delete hardware interrupt."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to delete hardware interrupt."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The hardware interrupt module is usable only when the configuration item for hardware"]
    #[doc = " interrupt tailoring is enabled.</li>"]
    #[doc = " <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range"]
    #[doc = " applicable for a Cortex-A7 platform is [32,95].</li>"]
    #[doc = " <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>"]
    #[doc = " <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable"]
    #[doc = "                       for a Cortex-A7 platform is [32,95]."]
    #[doc = " @param  irqParam [IN] Type #HwiIrqParam *. ID of hardware interrupt which will base on"]
    #[doc = "                                                when delete the hardware interrupt."]
    #[doc = " @retval #OS_ERRNO_HWI_NUM_INVALID              0x02000900: Invalid interrupt number."]
    #[doc = " @retval #LOS_OK                                0         : The interrupt is successfully delete."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchHwiDelete(hwiNum: HWI_HANDLE_T, irqParam: *mut HwiIrqParam) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_interrupt"]
    #[doc = " @brief Create a hardware interrupt."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to configure a hardware interrupt and register a hardware interrupt handling function."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The hardware interrupt module is usable only when the configuration item for hardware"]
    #[doc = " interrupt tailoring is enabled.</li>"]
    #[doc = " <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range"]
    #[doc = " applicable for a Cortex-A7 platform is [32,95].</li>"]
    #[doc = " <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>"]
    #[doc = " <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable for a"]
    #[doc = "                       Cortex-A7 platform is [32,95]."]
    #[doc = " @param  hwiPrio  [IN] Type#HWI_PRIOR_T: hardware interrupt priority. Ignore this parameter temporarily."]
    #[doc = " @param  mode     [IN] Type#HWI_MODE_T: hardware interrupt mode. Ignore this parameter temporarily."]
    #[doc = " @param  handler  [IN] Type#HWI_PROC_FUNC: interrupt handler used when a hardware interrupt is triggered."]
    #[doc = " @param  irqParam [IN] Type#HwiIrqParam: input parameter of the interrupt"]
    #[doc = "                                         handler used when a hardware interrupt is triggered."]
    #[doc = ""]
    #[doc = " @retval #OS_ERRNO_HWI_PROC_FUNC_NULL               0x02000901: Null hardware interrupt handling function."]
    #[doc = " @retval #OS_ERRNO_HWI_NUM_INVALID                  0x02000900: Invalid interrupt number."]
    #[doc = " @retval #OS_ERRNO_HWI_NO_MEMORY                    0x02000903: Insufficient memory for hardware interrupt creation."]
    #[doc = " @retval #OS_ERRNO_HWI_ALREADY_CREATED              0x02000904: The interrupt handler being created has"]
    #[doc = "                                                                already been created."]
    #[doc = " @retval #LOS_OK                                    0         : The interrupt is successfully created."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchHwiCreate(
        hwiNum: HWI_HANDLE_T,
        hwiPrio: HWI_PRIOR_T,
        mode: HWI_MODE_T,
        handler: HWI_PROC_FUNC,
        irqParam: *mut HwiIrqParam,
    ) -> UINT32;
}
extern "C" {
    pub fn ArchIsIntActive() -> UINT32;
}
extern "C" {
    pub fn ArchIntLock() -> UINT32;
}
extern "C" {
    pub fn ArchIntUnLock() -> UINT32;
}
extern "C" {
    pub fn ArchIntRestore(intSave: UINT32);
}
extern "C" {
    pub fn ArchIntTrigger(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntEnable(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntDisable(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntClear(hwiNum: HWI_HANDLE_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntSetPriority(hwiNum: HWI_HANDLE_T, priority: HWI_PRIOR_T) -> UINT32;
}
extern "C" {
    pub fn ArchIntCurIrqNum() -> UINT32;
}
extern "C" {
    pub fn ArchIntOpsGet() -> *mut HwiControllerOps;
}
extern "C" {
    #[doc = " @ingroup  los_context"]
    #[doc = " @brief: Task stack initialization."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to initialize the task stack."]
    #[doc = ""]
    #[doc = " @attention:"]
    #[doc = " <ul><li>None.</li></ul>"]
    #[doc = ""]
    #[doc = " @param  taskID     [IN] Type#UINT32: TaskID."]
    #[doc = " @param  stackSize  [IN] Type#UINT32: Total size of the stack."]
    #[doc = " @param  topStack   [IN] Type#VOID *: Top of task's stack."]
    #[doc = ""]
    #[doc = " @retval: context Type#TaskContext *."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_context.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchTskStackInit(
        taskID: UINT32,
        stackSize: UINT32,
        topStack: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " @ingroup  los_context"]
    #[doc = " @brief: Function to sys exit."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to sys exit."]
    #[doc = ""]
    #[doc = " @attention:"]
    #[doc = " <ul><li>None.</li></ul>"]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval: None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_context.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchSysExit();
}
extern "C" {
    #[doc = " @ingroup  los_context"]
    #[doc = " @brief: Task scheduling Function."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to scheduling task."]
    #[doc = ""]
    #[doc = " @attention:"]
    #[doc = " <ul><li>None.</li></ul>"]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval: None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_context.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchTaskSchedule();
}
extern "C" {
    pub fn ArchStartSchedule() -> UINT32;
}
extern "C" {
    pub fn ArchSignalContextInit(
        stackPointer: *mut ::std::os::raw::c_void,
        stackTop: *mut ::std::os::raw::c_void,
        sigHandler: UINTPTR,
        param: UINT32,
    ) -> *mut ::std::os::raw::c_void;
}
#[doc = " @ingroup los_list"]
#[doc = " Structure of a node in a doubly linked list."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LOS_DL_LIST {
    #[doc = "< Current node's pointer to the previous node"]
    pub pstPrev: *mut LOS_DL_LIST,
    #[doc = "< Current node's pointer to the next node"]
    pub pstNext: *mut LOS_DL_LIST,
}
#[test]
fn bindgen_test_layout_LOS_DL_LIST() {
    assert_eq!(
        ::std::mem::size_of::<LOS_DL_LIST>(),
        16usize,
        concat!("Size of: ", stringify!(LOS_DL_LIST))
    );
    assert_eq!(
        ::std::mem::align_of::<LOS_DL_LIST>(),
        8usize,
        concat!("Alignment of ", stringify!(LOS_DL_LIST))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LOS_DL_LIST>())).pstPrev as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LOS_DL_LIST),
            "::",
            stringify!(pstPrev)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LOS_DL_LIST>())).pstNext as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(LOS_DL_LIST),
            "::",
            stringify!(pstNext)
        )
    );
}
#[doc = " @ingroup los_event"]
#[doc = " Event control structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagEvent {
    #[doc = "< Event mask in the event control block,"]
    #[doc = "indicating the event that has been logically processed."]
    pub uwEventID: UINT32,
    #[doc = "< Event control block linked list"]
    pub stEventList: LOS_DL_LIST,
}
